# vokler-webserver

./: Cargo.toml  Rocket.toml  docker-compose.yml
src/: arbeit.rs  db_conn.rs  main.rs  req.rs
templates/: base.html.tera  home.html.tera  input.html.hbs  input.html.tera  test.html.tera  test_answer.html.tera  test_error.html.tera
