[package]
name = "vokler-webserver"
version = "0.1.0"
authors = ["pierre colin <19748519+picf@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
dotenv = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["tera_templates", "postgres_pool", "postgres"]

